# dicelib

./: .gitignore  README.md  dice.py  dicemath.zig  dicemathmod.zig  pyproject.toml
dicelib/: __init__.py  _dicemath_attempt.c  _dicemathffi.py  _dicemathffi.pyi  build.zig  dice.py  dicemath.zig
dicelib/include/mac/aarch64/: libdicemath.dylib
include/mac/x86_64/: libdicemath.dylib
src/: _dicemathffi.py  _dicemathffi.pyi  dice.py
tests/: test.py
