[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicelib"
dynamic = ["version"]
description = "Various stuff for handling dice."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Michael Hall", email = "michael@michaelhall.tech" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cffi"]
# To build:
# zig build-lib -fstrip -dynamic -O ReleaseFast -z nocopyreloc --gc-sections -fno-allow-shlib-undefined
# -fno-formatted-panics -fPIC -fPIE -freference-trace -fno-unwind-tables -Bsymbolic -fno-emit-implib 
# -fbuiltin -fno-single-threaded .\dicelib\dicemath.zig -target x86_64-windows-gnu

[project.urls]
Documentation = "https://github.com/mikeshardmind/dicelib#readme"
Issues = "https://github.com/mikeshardmind/dicelib/issues"
Source = "https://github.com/mikeshardmind/dicelib"

[tool.hatch.version]
path = "dicelib/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dicelib"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
extend-ignore = [
    "G002",    # erroneous issue with %-logging when logging can be confiured for % logging 
    "S101",    # use of assert here is a known quantity, blame typing memes
    "PLR2004", # Magic value comparison, may remove later
    "SIM105",  # supressable exception, I'm not paying the overhead of contextlib.supress for stylistic choices.
    "C90",     # mccabe complexity memes
    "ANN101",  # missing "Self" annotation, self is implicit
    "ANN204",  # special method return types are implied
    "PLR0913", # number of function arguments
    "UP007",   # "Use | For Union" doesn't account for typevar tuple unpacking.
    "S311",    # secrets isn't needed for this random generation.
    "PD011",   # Erroneous issue that triggers for any .values attribute access at all.
    "PLR",     # more complexity things
    # Recommended by ruff when using ruff format.
    "E111",
    "E114",
    "E117",
    "Q003",
    "COM812",
    "COM819",
    # "E501",
    "ISC001",
    "ISC002",
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.per-file-ignores]
# Init files are allowed to rexport names.
"__init__.py" = ["PLC0414"]
# Tests can use magic values, assertions, and relative imports.
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pyright]
include = ["dicelib"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
